--- a/style.css
+++ b/style.css
@@ -69,11 +69,11 @@ button:hover {
   background: linear-gradient(135deg, #005fcc, #003f99);
   transform: scale(1.04);
 }
-
 #gameArea {
   width: 300px;
   height: 300px;
-  background: linear-gradient(135deg, #f0f8ff, #cce7ff);
+  background: url('ruta-imagen-juego.jpg') no-repeat center center;
+  background-size: cover;
   border: 3px solid #007bff;
   border-radius: 20px;
   box-shadow: 0 8px 15px rgba(0,0,0,0.3);
@@ -134,4 +134,5 @@ button:hover {
   font-size: 14px;
   text-align: center;
 }
+
 
